--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Docsify Open Publishing Starter Kit</title>
+  <title>Docsify Open Publishing Starter Kit for Import</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -30,7 +30,7 @@
     window.$docsify = {
       // GENERAL SETTINGS
       // -----------------------------------------------------------------
-      name: 'Docsify Open Publishing Starter Kit',
+      name: 'Docsify Open Publishing Starter Kit for Import',
       // repo: 'https://github.com/hibbitts-design/docsify-open-publishing-starter-kit-for-import/',
       homepage: '/basics/overview.md',
       loadSidebar: true,
